# s2secret-server

./: .gitignore  Cargo.toml  README.md
migrations/: 20240901235302_initial_s2secret_schema.down.sql  20240901235302_initial_s2secret_schema.up.sql  20240922225416_move_secret_id_foreign_key_to_secret_share.down.sql  20240922225416_move_secret_id_foreign_key_to_secret_share.up.sql  20250223223223_add_password_file_in_users_table_for_opaque_auth.down.sql  20250223223223_add_password_file_in_users_table_for_opaque_auth.up.sql  20250316201731_add_server_setup_in_users_table_for_opaque_auth.down.sql  20250316201731_add_server_setup_in_users_table_for_opaque_auth.up.sql  20250324203021_modify_user_secret_key_file_column.down.sql  20250324203021_modify_user_secret_key_file_column.up.sql  20250324204535_modify_defaults_for_password_file_and_server_auth_setup.down.sql  20250324204535_modify_defaults_for_password_file_and_server_auth_setup.up.sql  20250329212419_server_user_relationship.down.sql  20250329212419_server_user_relationship.up.sql  20250719013308_binary_type_for_server_data.down.sql  20250719013308_binary_type_for_server_data.up.sql  20250802030322_insert_proactive_protection_intervals_for_secrets.down.sql  20250802030322_insert_proactive_protection_intervals_for_secrets.up.sql  20250809184705_binary_type_for_emergency_access_data.down.sql  20250809184705_binary_type_for_emergency_access_data.up.sql  20250810034310_default_random_server_key_file_emergency_contact.down.sql  20250810034310_default_random_server_key_file_emergency_contact.up.sql  20251013024810_modify_constraints_delete_action.down.sql  20251013024810_modify_constraints_delete_action.up.sql  20251013030226_unique_email_for_users.down.sql  20251013030226_unique_email_for_users.up.sql  20251109230513_remove_server_key_file_columns.down.sql  20251109230513_remove_server_key_file_columns.up.sql  20251111235733_unique_share_for_secrets.down.sql  20251111235733_unique_share_for_secrets.up.sql  20251112001456_emergency_access_email_notification.down.sql  20251112001456_emergency_access_email_notification.up.sql  20251112002811_add_necessary_not_null_constraints_for_foreign_keys.down.sql  20251112002811_add_necessary_not_null_constraints_for_foreign_keys.up.sql  20251122022300_remove_emergency_access_email_notification.down.sql  20251122022300_remove_emergency_access_email_notification.up.sql
service/: Cargo.toml
service/src/: cryptography.rs  emergency_access.rs  emergency_contacts.rs  lib.rs  mail.rs  secrets.rs  user.rs
src/: main.rs
