[package]
name = "s2secret-server"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Axel Bukovits <8598589+axelnico@users.noreply.github.com>"]

[workspace]
members = [".", "service"]

[dependencies]
axum = { version = "0.8.1", features = ["default", "macros"]}
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.1", features = ["postgres", "macros", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.87"
opaque-ke = { version = "3.0.0", features = ["argon2", "serde"]}
s2secret-service = { path = "service"}
rand = "0.9.0"
argon2 = "0.5.3"
axum_session = { version = "0.16.0",features = ["rest_mode"]}
axum_session_auth = { version = "0.16.0",features = ["rest_mode"]}
axum_session_sqlx = {version = "0.5.0", default-features = false, features = ["postgres"] }
async-trait = "0.1.87"