[package]
name = "s2secret-server"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Axel Bukovits <8598589+axelnico@users.noreply.github.com>"]

[workspace]
members = [".", "service"]

[dependencies]
axum = { version = "0.8.4", features = ["default", "macros"]}
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.1", features = ["postgres", "macros", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.87"
opaque-ke = { version = "3.0.0", features = ["argon2", "serde"]}
s2secret-service = { path = "service"}
rand = "0.9.0"
argon2 = "0.5.3"
axum_session = { version = "0.16.0",features = ["rest_mode"]}
axum_session_auth = { version = "0.16.0",features = ["rest_mode"]}
axum_session_sqlx = {version = "0.5.0", default-features = false, features = ["postgres"] }
async-trait = "0.1.87"
ciborium = "0.2.2"
coset = "0.3.8"
aes-gcm = "0.10.3"
sharks = { git = "https://github.com/axelnico/sharks.git", branch = "proactive-secret-sharing"}
hmac-sha512 = "1.1.7"
bincode = "2.0.1"
lettre = "0.11.18"
validator = { version = "0.20.0", features = ["derive"] }
rcgen = "0.14.7"
rustls-pemfile = "2.1.3"
rustls = { version = "0.23.36", features = ["ring"] }